# smartcompliance-ai

./: .gitignore  .vercelignore  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  tsconfig.json
design-request/: CLEAN_THEME_MIGRATION_GUIDE.md  README.md  THEME_COMPLETION_SUMMARY.md  index.html
design-request/src/app/: routes.tsx
design-request/src/styles/: glassmorphism.css  theme.css
legacy-backend/: README.md  pyproject.toml
legacy-backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
legacy-backend/app/seed/: watchlists.json
legacy-backend/app/services/: audit.py  risk.py  screening.py
legacy-backend/smartcompliance_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
legacy-backend/tests/: test_api.py
src/app/: auth-actions.ts  globals.css  layout.tsx  page.tsx
src/app/[module]/: page.tsx
src/app/dashboard/: page.tsx
src/app/forgot-password/: page.tsx
src/app/login/: page.tsx
src/app/reset-password/: page.tsx
src/app/settings/: page.tsx
src/app/unauthorized/: page.tsx
src/app/verify-email/: page.tsx
src/components/: auth-form.tsx  auth-provider.tsx  auth-shell.tsx  interactive-chart.tsx  module-view.tsx  platform-shell.tsx  reports-workspace.tsx  settings-workspace.tsx  top-nav.tsx  verify-email-client.tsx  workspace-provider.tsx
src/lib/: auth-messages.ts  authz.ts  data.ts  demo-auth.ts  demo-data.ts  demo-workspace.ts  module-content.ts  navigation.ts  server-auth.ts
src/lib/supabase/: client.ts  middleware.ts  server.ts
supabase/: schema.sql  seed.sql
(+23 files in other folders)
